--- a/src/app/image/image.component.css
+++ b/src/app/image/image.component.css
@@ -15,3 +15,165 @@
   left: 50%;
   transform: translate(-50%, -50%);
 } */
+
+
+mat-toolbar {
+  justify-content: space-between;
+}
+
+.contentdiv {
+  padding: 32px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #ecd2d2;
+  border-bottom: 1px solid #ccc;
+}
+
+.logo {
+  font-size: 24px;
+}
+
+.mode-toggle,
+.login-logout {
+  cursor: pointer;
+}
+
+.mode-toggle i,
+.login-logout i {
+  font-size: 20px;
+}
+
+.dark-mode {
+  background-color: #979797;
+  color: #fff;
+}
+
+.header.dark-mode {
+  background-color: #333;
+  border-bottom: 1px solid #ccc;
+}
+
+.footer.dark-mode {
+  background-color: #333;
+  color: #fff;
+}
+
+.left-container.dark-mode {
+  background-color: #333;
+}
+
+.main-container {
+  display: flex;
+  height: 85vh;
+}
+
+.left-container {
+  width: 200px;
+  background-color: #6c3d3d;
+  padding: 10px;
+  height: 95%;
+}
+
+.content-container {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+  margin-left: 20px;
+  border: 1px solid #000000;
+  border-radius: 8px;
+  background-color: pink;
+  overflow: hidden;
+}
+
+.image-preview {
+  max-width: 60%;
+  max-height: 60%;
+  border-radius: 8px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
+  object-fit: contain;
+  width: auto;
+  height: auto;
+}
+#imageeditor {
+  width: 550px;
+  height: 330px;
+}
+.left-container.dark-mode {
+  background-color: #333;
+}
+
+.nav-bar {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.nav-bar button {
+  padding: 10px;
+  border: none;
+  margin-top: 50px;
+  background-color: #fff;
+  color: #333;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.nav-bar button:hover {
+  background-color: #ddd;
+}
+
+.center-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
+
+.footer {
+  padding: 10px;
+  text-align: center;
+  background-color: #ecd2d2;
+  color: #333;
+}
+
+.footer.dark-mode {
+  background-color: #333;
+  color: #fff;
+}
+
+@media (max-width: 600px) {
+  .logo {
+    font-size: 18px;
+  }
+  .left-container {
+    display: flex;
+  }
+
+  .content-container {
+    margin-top: 20px;
+  }
+
+  .image-preview {
+    max-width: 100%;
+    max-height: 100%;
+  }
+
+  .nav-bar button {
+    margin-top: 0;
+  }
+
+  .footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+  }
+}
