Your commit message

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,9 +42,18 @@ login
  -->
 <!-- <app-login></app-login> -->
 <!-- <router-outlet></router-outlet> -->
+<!-- <router-outlet></router-outlet> -->
 <!-- <app-sign-up></app-sign-up> -->
 <!-- <app-landing></app-landing> -->
 <!-- <app-image></app-image> -->
-<h1>Image Editor App</h1>
-<app-image-editor></app-image-editor>
+<!-- <h1>Image Editor App</h1> -->
+<!-- <app-image-editor></app-image-editor> -->
 <!-- <app-canvas></app-canvas> -->
+
+<!-- <app-crop-resize></app-crop-resize> -->
+<!-- <app-editorimage></app-editorimage> -->
+<!-- <h1>h</h1> -->
+<!-- <app-crud></app-crud> -->
+<!-- <app-testong></app-testong> -->
+<!-- <app-header></app-header> -->
+<router-outlet></router-outlet>
