--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,11 +1,12 @@
-.login-container {
+/* .login-container {
     max-width: 400px;
-    margin: 0 auto;
+    margin: 100px auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #fff;
   }
+  
   
   h2 {
     text-align: center;
@@ -80,4 +81,110 @@
   .signup-forgot a:hover {
     text-decoration: underline;
   }
+   */
+
+
+   
+
+  .login-container {
+    display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #29323c;
+  color: white;
+  /* backdrop-filter: blur(10px); */
+  border-radius: 10px;
+  padding: 20px;
+  width: 400px;
+  margin: 0 auto;
+  margin-top: 50px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  }
+  
+  .login-container h2 {
+    font-size: 2.5rem;
+    font-weight: 500;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+    /* color: #485563; */
+  }
+  
+  .login-container form {
+    width: 100%;
+  }
+  
+  .login-container .form-group {
+    margin-bottom: 20px;
+  }
+  
+  .login-container .form-group label {
+    /* font-weight: ; */
+    font-size: 16px;
+    color: white;
+  }
+  
+  .login-container .form-group input[type="email"],
+  .login-container .form-group input[type="password"] {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    /* border: none; */
+    background-color: #485563;
+    color: white;
+    font-size:16px;
+  }
+  
+  .login-container .form-group input[type="email"]:focus,
+  .login-container .form-group input[type="password"]:focus {
+    outline: none;
+  }
+  
+  .login-container .form-group button {
+    background-color: #4caf50;
+    color: white;
+    padding: 10px 20px;
+    /* border: none; */
+    border-radius: 5px;
+    cursor: pointer;
+    /* font-weight: bold; */
+    font-size: 16px;
+  }
+  
+  .login-container .or-divider {
+    margin: 20px 0;
+    text-align: center;
+    font-weight: bold;
+    /* color: #485563; */
+    font-size: 1.2rem;
+  }
+  
+  .login-container .btn-gmail {
+    background-color: #db4437;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    /* font-weight: bold; */
+    font-size: 16px;
+  }
+  
+  .login-container .signup-forgot {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    font-size: 16px;
+  }
+  
+  .login-container .signup-forgot a {
+    /* color: #485563; */
+    text-decoration: none;
+  }
+  
+  .login-container h2 span {
+    color: crimson;
+  }
+  
   
