--- a/src/app/testong/testong.component.html
+++ b/src/app/testong/testong.component.html
@@ -1,4 +1,4 @@
-<p>testong works!</p>
+<!-- <p>testong works!</p>
 
 
 <div class="form-container">
@@ -46,4 +46,276 @@
     </tbody>
   </table>
 </div>
+   -->
+
+
+
+
+
+
+
+   <!-- <section id="projects">
+    <div class="projects container">
+      <div class="projects-header">
+        <h1 class="section-title">Recent <span>Projects</span></h1>
+      </div>
+      <div class="all-projects">
+
+        <div class="headerdiv">
+          <label for="fileInput" class="icon-button">
+            
+            <mat-icon class="icon">folder</mat-icon>
+          </label>
+          <div class="header-text">Choose Image</div>
+          <button class="clear-button" (click)="clear()">Clear</button>
+          <input id="fileInput" type="file" #myInput class="hidden" (change)="fileChangeEvent($event)" />
+        </div>
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Image Editor</h1>
+            <div class="content-first">
+              <h5>Crop Image</h5>
+              <image-cropper 
+                [imageChangedEvent]="imageChangedEvent"
+                [maintainAspectRatio]="true"
+                [containWithinAspectRatio]="containWithinAspectRatio"
+                [aspectRatio]="4 / 3"
+                [resizeToWidth]="256"
+                [cropperMinWidth]="128"
+                [onlyScaleDown]="true"
+                [roundCropper]="false"
+                [canvasRotation]="canvasRotation"
+                [transform]="transform"
+                [alignImage]="'left'"
+                [style.display]="showCropper ? null : 'none'"
+                format="png"
+                (imageCropped)="imageCropped($event)"
+                (imageLoaded)="imageLoaded()"
+                (cropperReady)="cropperReady($event)"
+                (loadImageFailed)="loadImageFailed()">
+              </image-cropper>
+            </div>
+            
+          </div>
+          
+        </div>
+
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Image Editor</h1>
+            <div class="content-second">
+              <h5>Preview</h5>
+              <img [src]="croppedImage" />
+              
+            </div>
+           
+          </div>
+          
+        </div>
+    </div>
+    </div>
+  </section> -->
+
+
+  <!-- <section id="projects">
+    <div class="projects container">
+      <div class="projects-header">
+        <h1 class="section-title">Recent <span>Projects</span></h1>
+      </div>
+
+     
+
+
+
+      
+      
+      <div class="allcontent">
+      <div class="headerdiv">
+        <label for="fileInput" class="icon-button">
+          <mat-icon class="icon">folder</mat-icon>
+        </label>
+        <div class="header-text">Choose Image</div>
+        <button class="clear-button" (click)="clear()">Clear</button>
+        <input id="fileInput" type="file" #myInput class="hidden" (change)="fileChangeEvent($event)" />
+      </div>
+      <div class="all-projects">
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Image Editor</h1>
+            <div class="content-first">
+              <h5>Crop Image</h5>
+              <image-cropper 
+                [imageChangedEvent]="imageChangedEvent"
+                [maintainAspectRatio]="true"
+                [containWithinAspectRatio]="containWithinAspectRatio"
+                [aspectRatio]="4 / 3"
+                [resizeToWidth]="256"
+                [cropperMinWidth]="128"
+                [onlyScaleDown]="true"
+                [roundCropper]="false"
+                [canvasRotation]="canvasRotation"
+                [transform]="transform"
+                [alignImage]="'left'"
+                [style.display]="showCropper ? null : 'none'"
+                format="png"
+                (imageCropped)="imageCropped($event)"
+                (imageLoaded)="imageLoaded()"
+                (cropperReady)="cropperReady($event)"
+                (loadImageFailed)="loadImageFailed()">
+              </image-cropper>
+            </div>
+          </div>
+        </div>
+  
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Image Editor</h1>
+            <div class="content-second">
+              <h5>Preview</h5>
+              <img [src]="croppedImage" />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footerdiv">
+    <button (click)="rotateLeft()" class="btn btn-dark">
+      <mat-icon>rotate_left</mat-icon>
+    </button>
+    <button (click)="rotateRight()" class="btn btn-dark">
+      <mat-icon>rotate_right</mat-icon>
+    </button>
+    <button (click)="flipHorizontal()" class="btn btn-dark">
+      <mat-icon>flip</mat-icon>
+    </button>
+    <button (click)="flipVertical()" class="btn btn-dark">
+      <mat-icon>flip</mat-icon>
+    </button>
+    <input [(ngModel)]="rotation" placeholder="Rotation" class="form-control mr-2" type="number" (keyup)="updateRotation()" />
+
+  <input (click)="zoomOut()" class="mr-4 btn btn-success zoom-btn" value="Zoom -" />
+  <input (click)="zoomIn()" class="mr-2 btn btn-success" value="Zoom +" />
+
+  
+    <button (click)="toggleContainWithinAspectRatio()" class="btn btn-warning">
+      <mat-icon>{{ containWithinAspectRatio ? 'crop_free' : 'crop_original' }}</mat-icon>
+    </button>
+    <button (click)="resetImage()" class="btn btn-warning">
+      <mat-icon>settings_backup_restore</mat-icon>
+    </button>
+    <button (click)="saveImage()" class="btn btn-primary">Save</button>
+  </div>
+  </div>
+    </div>
+  </section>
+   -->
+
+<body>
+  
+
+   <div class="login-container">
+    <div class="header">
+    <h2>Login</h2>
+    </div>
+    <form >
+      <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email"  required>
+      </div>
+      <div class="form-group">
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password"  required>
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn">Login</button>
+      </div>
+    </form>
+    <div class="or-divider">or</div>
+    <button class="btn btn-gmail">Signup with Gmail</button>
+  
+    <div class="signup-forgot">
+      <a routerLink="/sign-up">Don't have an account? Sign up</a>
+      <a routerLink="/Landing">Forgot password?</a>
+    </div>
+  </div>
+  </body>
+   <!-- <section id="projects">
+    <div class="projects container">
+      <div class="projects-header">
+        <h1 class="section-title">Image <span>Editor</span></h1>
+      </div>
+      <div class="allcontent">
+        <div class="headerdiv">
+          <label for="fileInput" class="icon-button">
+            <mat-icon class="icon">folder</mat-icon>
+          </label>
+          <div class="header-text">Choose Image</div>
+          <button class="clear-button" (click)="clear()">Clear</button>
+          <input id="fileInput" type="file" #myInput class="hidden" (change)="fileChangeEvent($event)" />
+        </div>
+        <div class="all-projects">
+          <div class="project-item">
+            <div class="project-info">
+              <h1>Image Editor</h1>
+              <div class="content-first">
+                <h5>Crop Image</h5>
+                <image-cropper 
+                  [imageChangedEvent]="imageChangedEvent"
+                  [maintainAspectRatio]="true"
+                  [containWithinAspectRatio]="containWithinAspectRatio"
+                  [aspectRatio]="4 / 3"
+                  [resizeToWidth]="256"
+                  [cropperMinWidth]="128"
+                  [onlyScaleDown]="true"
+                  [roundCropper]="false"
+                  [canvasRotation]="canvasRotation"
+                  [transform]="transform"
+                  [alignImage]="'left'"
+                  [style.display]="showCropper ? null : 'none'"
+                  format="png"
+                  (imageCropped)="imageCropped($event)"
+                  (imageLoaded)="imageLoaded()"
+                  (cropperReady)="cropperReady($event)"
+                  (loadImageFailed)="loadImageFailed()">
+                </image-cropper>
+              </div>
+            </div>
+          </div>
+    
+          <div class="project-item">
+            <div class="project-info">
+              <h1>Image Editor</h1>
+              <div class="content-second">
+                <h5>Preview</h5>
+                <img [src]="croppedImage" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footerdiv">
+          <button (click)="rotateLeft()" class="btn btn-dark">
+            <mat-icon>rotate_left</mat-icon>
+          </button>
+          <button (click)="rotateRight()" class="btn btn-dark">
+            <mat-icon>rotate_right</mat-icon>
+          </button>
+          <button (click)="flipHorizontal()" class="btn btn-dark">
+            <mat-icon>flip</mat-icon>
+          </button>
+          <button (click)="flipVertical()" class="btn btn-dark">
+            <mat-icon>flip</mat-icon>
+          </button>
+          <input [(ngModel)]="rotation" placeholder="Rotation" class="form-control mr-2" type="number" (keyup)="updateRotation()" />
+          <input (click)="zoomOut()" class="mr-4 btn btn-success zoom-btn" value="Zoom -" />
+          <input (click)="zoomIn()" class="mr-2 btn btn-success" value="Zoom +" />
+          <button (click)="toggleContainWithinAspectRatio()" class="btn btn-warning">
+            <mat-icon>{{ containWithinAspectRatio ? 'crop_free' : 'crop_original' }}</mat-icon>
+          </button>
+          <button (click)="resetImage()" class="btn btn-warning">
+            <mat-icon>settings_backup_restore</mat-icon>
+          </button>
+          <button (click)="saveImage()" class="btn btn-primary">Save</button>
+        </div>
+      </div>
+    </div>
+  </section> -->
   
