--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,3 +1,13 @@
 <!-- <p>canvas works!</p> -->
 <!-- <canvas #canvasE1></canvas> -->
-<button (click)="saveImage()">Save Image</button>
+
+<div class="custom-div">
+    <div class="header">
+      <img src="file-icon.png" alt="File Icon" class="file-icon">
+    </div>
+    <div class="body">
+      <!-- Content goes here -->
+    </div>
+  </div>
+  
+  
