--- a/src/app/components/landing/landing.component.css
+++ b/src/app/components/landing/landing.component.css
@@ -1,60 +1,72 @@
 .forgot-password-container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #fff;
-  }
-  
-  h2 {
-    text-align: center;
-  }
-  
-  .form-group {
-    margin-bottom: 20px;
-  }
-  
-  label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  input[type="email"] {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-  }
-  
-  .btn {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    text-align: center;
-    background-color: #4caf50;
-    color: #fff;
-    border: none;
-    border-radius: 3px;
-    cursor: pointer;
-  }
-  
-  .btn:hover {
-    background-color: #45a049;
-  }
-  
-  .back-to-login {
-    text-align: center;
-    margin-top: 20px;
-  }
-  
-  .back-to-login a {
-    color: #000;
-    text-decoration: none;
-  }
-  
-  .back-to-login a:hover {
-    text-decoration: underline;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #29323c;
+  color: white;
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  padding: 20px;
+  width: 400px;
+  margin: 0 auto;
+  margin-top: 50px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.forgot-password-container h2 {
+  font-size: 24px;
+  /* font-weight: bold; */
+  margin-bottom: 20px;
+}
+
+.forgot-password-container form {
+  width: 100%;
+}
+
+.forgot-password-container .form-group {
+  margin-bottom: 20px;
+}
+
+.forgot-password-container label {
+  font-size: 16px;
+  /* font-weight: bold; */
+}
+
+.forgot-password-container input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  background-color: #485563;
+  color: white;
+  font-size: 16px;
+}
+
+.forgot-password-container button[type="submit"] {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.forgot-password-container button[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+.forgot-password-container .back-to-login {
+  margin-top: 20px;
+}
+
+.forgot-password-container .back-to-login a {
+  color: #ccc;
+  text-decoration: underline;
+  font-size: 16px;
+}
+
+.forgot-password-container .back-to-login a:hover {
+  color: white;
+}
