--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,5 @@
+<body>
+
 <div class="login-container">
     <h2>Login</h2>
     <form (ngSubmit)="login()">
@@ -23,3 +25,7 @@
   </div>
 
   
+
+
+
+</body>
