--- a/src/app/components/sign-up/sign-up.component.css
+++ b/src/app/components/sign-up/sign-up.component.css
@@ -1,36 +1,80 @@
 .signup-container {
-    max-width: 400px;
-    margin: 0 auto;
-  }
-  
-  .form-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #29323c;
+  color: white;
+  /* backdrop-filter: blur(10px); */
+  border-radius: 10px;
+  padding: 20px;
+  width: 400px;
+  margin: 0 auto;
+  margin-top: 50px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.signup-container h2 {
+  font-size: 2.5rem;
+    font-weight: 500;
     margin-bottom: 20px;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  input[type="text"],
-  input[type="email"],
-  input[type="password"] {
-    width: 100%;
-    padding: 8px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  button {
-    padding: 10px 20px;
-    background-color: #4CAF50;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+}
+
+.signup-container form {
+  width: 100%;
+}
+
+.signup-container .form-group {
+  margin-bottom: 20px;
+}
+
+.signup-container label {
+  font-weight: bold;
+    font-size: 1.2rem;
     color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #45a049;
-  }
-  
+}
+
+.signup-container input[type="text"],
+.signup-container input[type="email"],
+.signup-container input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  /* border: 1px solid #ccc; */
+  background-color: #485563;
+  color: white;
+  font-size: 16px;
+}
+
+.signup-container button[type="submit"] {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.signup-container button[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+.signup-container button {
+  background-color: transparent;
+  border: none;
+  color: #ccc;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.signup-container button:hover {
+  text-decoration: underline;
+}
+
+body {
+  background-color: rgba(128, 128, 128, 0.8);
+  backdrop-filter: blur(20px);
+}
