--- a/src/styles.css
+++ b/src/styles.css
@@ -8,15 +8,20 @@
 @import "../node_modules/@syncfusion/ej2-navigations/styles/material.css";
 @import "../node_modules/@syncfusion/ej2-inputs/styles/material.css";
 @import "../node_modules/@syncfusion/ej2-image-editor/styles/material.css";
+@import "~bootstrap/dist/css/bootstrap.css";
+
+@import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
 
 html,
 body {
   height: 100%;
+  
 }
 
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+/* background-color: gray; */
 }
 
 .form-container {
@@ -24,7 +29,7 @@ body {
   max-width: 300px;
   margin: auto;
   background: #eceff1;
-  padding: 48px;
+  padding: 0;
   border-radius: 16px;
 }
 
