--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -72,19 +72,24 @@ p {
 }
 
 /* Header section */
+/* Header section */
 #header {
 	position: fixed;
 	z-index: 1000;
-	left: 0;
 	top: 0;
+	left: 0;
 	width: 100%;
-	height: auto;
-}
-#header .header {
-	min-height: 8vh;
 	background-color: rgba(31, 30, 30, 0.24);
-	transition: 0.3s ease background-color;
 }
+
+#header .header {
+	/* display: flex; */
+	align-items: center;
+	/* justify-content: space-between; */
+	padding: 10px;
+	min-height: 8vh;
+}
+
 #header .nav-bar {
 	display: flex;
 	align-items: center;
@@ -94,108 +99,95 @@ p {
 	max-width: 1300px;
 	padding: 0 10px;
 }
+
+#header .brand a {
+	text-decoration: none;
+}
+
+#header .brand h1 {
+	font-size: 3rem;
+	text-transform: uppercase;
+	color: white;
+	margin: 0;
+	text-align: center;
+}
+
+#header .brand h1 span {
+	color: crimson;
+}
+
+#header .nav-list {
+	display: flex;
+	align-items: center;
+	/* margin-right: 200px; */
+}
+
 #header .nav-list ul {
 	list-style: none;
-	position: absolute;
-	background-color: rgb(31, 30, 30);
-	width: 100vw;
-	height: 100vh;
-	left: 100%;
-	top: 0;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
 	align-items: center;
-	z-index: 1;
-	overflow-x: hidden;
-	transition: 0.5s ease left;
+	justify-content: center;
+	margin-left: auto;
 }
-#header .nav-list ul.active {
-	left: 0%;
+
+#header .nav-list ul li {
+	margin-left: 20px;
 }
-#header .nav-list ul a {
-	font-size: 2.5rem;
+
+#header .nav-list ul li a {
+	font-size: 1.8rem;
 	font-weight: 500;
-	letter-spacing: 0.2rem;
 	text-decoration: none;
 	color: white;
 	text-transform: uppercase;
-	padding: 20px;
+	transition: color 0.3s ease;
 	display: block;
 }
-#header .nav-list ul a::after {
-	content: attr(data-after);
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%) scale(0);
-	color: rgba(240, 248, 255, 0.021);
-	font-size: 13rem;
-	letter-spacing: 50px;
-	z-index: -1;
-	transition: 0.3s ease letter-spacing;
-}
-#header .nav-list ul li:hover a::after {
-	transform: translate(-50%, -50%) scale(1);
-	letter-spacing: initial;
-}
-#header .nav-list ul li:hover a {
+
+#header .nav-list ul li a:hover {
 	color: crimson;
 }
-#header .hamburger {
-	height: 60px;
-	width: 60px;
-	display: inline-block;
-	border: 3px solid white;
-	border-radius: 50%;
-	position: relative;
+
+/* Media Query */
+@media only screen and (min-width: 768px) {
+	#header .hamburger {
+		display: none;
+	}
+
+	
+	#header .nav-list ul li a {
+		font-size: 1.6rem;
+	}
+}
+
+/* Mobile Menu */
+#header .nav-list ul.active {
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	z-index: 100;
-	cursor: pointer;
-	transform: scale(0.8);
-	margin-right: 20px;
-}
-#header .hamburger:after {
 	position: absolute;
-	content: '';
-	height: 100%;
-	width: 100%;
-	border-radius: 50%;
-	border: 3px solid white;
-	animation: hamburger_puls 1s ease infinite;
-}
-#header .hamburger .bar {
-	height: 2px;
-	width: 30px;
-	position: relative;
-	background-color: white;
-	z-index: -1;
-}
-#header .hamburger .bar::after,
-#header .hamburger .bar::before {
-	content: '';
-	position: absolute;
-	height: 100%;
-	width: 100%;
+	top: 100%;
 	left: 0;
-	background-color: white;
-	transition: 0.3s ease;
-	transition-property: top, bottom;
+	width: 100%;
+	background-color: rgba(31, 30, 30, 0.9);
+	padding: 10px;
+	transition: opacity 0.3s ease;
 }
-#header .hamburger .bar::after {
-	top: 8px;
+
+#header .nav-list ul.active li {
+	margin: 10px 0;
 }
-#header .hamburger .bar::before {
-	bottom: 8px;
+
+#header .nav-list ul.active li a {
+	font-size: 1.6rem;
+	color: white;
 }
-#header .hamburger.active .bar::before {
-	bottom: 0;
+
+#header .nav-list ul.active li a:hover {
+	color: crimson;
 }
-#header .hamburger.active .bar::after {
-	top: 0;
-}
+
 /* End Header section */
 
 /* Hero Section */
@@ -264,67 +256,7 @@ p {
 
 /* End Hero Section */
 
-/* Services Section */
-#services .services {
-	flex-direction: column;
-	text-align: center;
-	max-width: 1500px;
-	margin: 0 auto;
-	padding: 100px 0;
-}
-#services .service-top {
-	max-width: 500px;
-	margin: 0 auto;
-}
-#services .service-bottom {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-wrap: wrap;
-	margin-top: 50px;
-}
-#services .service-item {
-	flex-basis: 80%;
-	display: flex;
-	align-items: flex-start;
-	justify-content: center;
-	flex-direction: column;
-	padding: 30px;
-	border-radius: 10px;
-    background-image: url('../../../assets/img.avif');
-	background-size: cover;
-	margin: 10px 5%;
-	position: relative;
-	z-index: 1;
-	overflow: hidden;
-}
-#services .service-item::after {
-	content: '';
-	position: absolute;
-	left: 0;
-	top: 0;
-	height: 100%;
-	width: 100%;
-	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-	opacity: 0.9;
-	z-index: -1;
-}
-#services .service-bottom .icon {
-	height: 80px;
-	width: 80px;
-	margin-bottom: 20px;
-}
-#services .service-item h2 {
-	font-size: 2rem;
-	color: white;
-	margin-bottom: 10px;
-	text-transform: uppercase;
-}
-#services .service-item p {
-	color: white;
-	text-align: left;
-}
-/* End Services Section */
+
 
 /* Projects section */
 #projects .projects {
