--- a/src/app/editorimage/editorimage.component.css
+++ b/src/app/editorimage/editorimage.component.css
@@ -1,8 +1,77 @@
+/* Header section */
+#header {
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(31, 30, 30, 0.24);
+}
+
+#header .header {
+  align-items: center;
+  padding: 10px;
+  min-height: 8vh;
+}
+
+#header .nav-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  max-width: 1300px;
+  padding: 0 10px;
+}
+
+#header .brand a {
+  text-decoration: none;
+}
+
+#header .brand h1 {
+  font-size: 3rem;
+  text-transform: uppercase;
+  color: white;
+  margin: 0;
+  text-align: center;
+}
+
+#header .brand h1 span {
+  color: crimson;
+}
+
+#header .nav-list {
+  display: flex;
+  align-items: center;
+}
+
+#header .nav-list ul {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+}
+
+#header .nav-list ul li {
+  margin-left: 20px;
+}
+
+#header .nav-list ul li a {
+  font-size: 1.8rem;
+  font-weight: 500;
+  text-decoration: none;
+  color: white;
+}
+
+
+/* Projects section */
 #projects .projects {
+  display: flex;
   flex-direction: column;
   max-width: 1200px;
   margin: 0 auto;
-  padding:  0;
+  padding: 20px;
 }
 
 #projects .all-projects {
@@ -24,7 +93,7 @@
 #projects .project-info {
   padding: 30px;
   flex-basis: 50%;
-  height: 360px;
+  height: 400px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -53,6 +122,8 @@
   transform: scale(1.1);
 }
 
+
+/* Section title */
 .section-title {
   font-size: 4rem;
   font-weight: 300;
@@ -67,6 +138,8 @@
   color: crimson;
 }
 
+
+/* Header div */
 .headerdiv {
   display: flex;
   align-items: center;
@@ -107,9 +180,11 @@
   cursor: pointer;
 }
 
+
+/* Content divs */
 .content-first,
 .content-second {
-  padding: 170px;
+  padding: 50px;
 }
 
 .content-first h5,
@@ -125,11 +200,17 @@
 }
 
 
+/* Footer div */
 .footerdiv {
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin-top: 0;
+  justify-content: space-between;
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  overflow-x: auto;
+  padding: 10px;
 }
 
 .footerdiv button {
@@ -210,10 +291,12 @@
 }
 
 
-
 /* Media Queries */
-
 @media (max-width: 768px) {
+  #header .brand h1 {
+    font-size: 2.5rem;
+  }
+
   #projects .project-info h1 {
     font-size: 3rem;
   }
@@ -250,9 +333,52 @@
   .footerdiv .form-control {
     font-size: 12px;
   }
+
+  #header .nav-bar {
+    flex-direction: column;
+  }
+
+  #header .nav-list {
+    margin-top: 20px;
+  }
+
+  #header .nav-list ul {
+    margin-left: 0;
+    flex-direction: column;
+  }
+
+  #header .nav-list ul li {
+    margin-left: 0;
+    margin-bottom: 10px;
+  }
+
+  /* Projects section */
+  #projects .projects {
+    padding: 20px;
+  }
+
+  #projects .all-projects {
+    flex-direction: column;
+  }
+
+  #projects .project-item {
+    width: 100%;
+  }
+
+  /* Content divs */
+  .content-first,
+  .content-second {
+    padding: 50px;
+  }
+
+
 }
 
 @media (max-width: 600px) {
+  #header .brand h1 {
+    font-size: 2rem;
+  }
+
   #projects .project-info h1 {
     font-size: 2.5rem;
   }
@@ -291,5 +417,8 @@
   .footerdiv .form-control {
     font-size: 10px;
     padding: 4px 8px;
+  }
+  .footerdiv {
+    justify-content: center;
   }
 }
