--- a/src/styles.css
+++ b/src/styles.css
@@ -19,7 +19,7 @@ body {
 }
 
 body {
-  margin: 0;
+  /* margin: 0; */
   font-family: Roboto, "Helvetica Neue", sans-serif;
 /* background-color: gray; */
 }
@@ -50,5 +50,5 @@ body {
   text-align: center;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+/* html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
